Gave homepage its own main and sidebar to allow other pages to have a different height. Also set up signin-test in an attempt to fix overflow issues in signin document

--- a/src/client/css-styles/styles-signin.css
+++ b/src/client/css-styles/styles-signin.css
@@ -6,17 +6,13 @@
   box-sizing: border-box;
 }
 
-body,
-input {
-  font-family: "Poppins", sans-serif;
-}
-
 .container {
   position: relative;
   width: 100%;
   background-color: #fff;
-  min-height: 100vh;
+  min-height: 100%;
   overflow: hidden;
+  font-family: "Poppins", sans-serif;
 }
 
 .forms-container {
@@ -85,6 +81,7 @@ form.sign-in-form {
   color: #acacac;
   transition: 0.5s;
   font-size: 1.1rem;
+  font-family: "Poppins", sans-serif;
 }
 
 .input-field input {
